--- a/recipes/fried-noodles.html
+++ b/recipes/fried-noodles.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Fried Noodles</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
-    <a href="./recipes/fried-noodles.html">Fried Noodles</a>
-    <a href="./recipes/fried-rice.html">Fried Rice</a>
+    <h1>Fried Noodles!</h1>
 </body>
 </html>
