Content of recipes pages added Added Description, Ingredients and steps for each recipe.

--- a/recipes/fried-noodles.html
+++ b/recipes/fried-noodles.html
@@ -8,5 +8,26 @@
 </head>
 <body>
     <h1>Fried Noodles!</h1>
+    <img src="" alt="">
+    <h1>Description</h1>
+    <p>
+        Hong Kong style pan-fried noodles can be found at Chinese and Asian markets. They’re egg noodles, so they should be yellow in color, and they can be found fresh or dried.
+    </p>
+    <p>
+        Whether they’re fresh or dried, however, make sure you buy the noodles specified as “Hong Kong Style Pan-Fried Noodles” or “Hong Kong Style Egg Noodles.”
+    </p>
+<h1>Ingredients</h1>
+<ul>
+    <li>1/2 cups bean sprouts</li>
+    <li>2 teaspoons soy sauce</li>
+    <li>½ teaspoon sesame oil</li>
+</ul>
+
+<h1>Steps</h1>
+<ol>
+    <li>Mix the soy sauces, sesame oil, salt, sugar, wine and white pepper in a small bowl and set aside.</li>
+    <li>Heat the wok to high and add a tablespoon of vegetable oil to coat the wok</li>
+    <li>Flip the noodles over, add another tablespoon of oil around the perimeter of the wok, and let the other side crisp up.</li>
+</ol>
 </body>
 </html>
