--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -8,5 +8,26 @@
 </head>
 <body>
     <h1>Fried Rice!</h1>
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Frecipes.timesofindia.com%2Frecipes%2Fchicken-fried-rice%2Frs75581339.cms&psig=AOvVaw338vKGdeiIgosrwybCOqQj&ust=1665606993295000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCOD9zN6D2foCFQAAAAAdAAAAABAD" alt="fried rice">
+    <h1>Description</h1>
+        <p>
+            Fried Rice is a combination of long grained rice, mixture of warm peas, carrots and onions with scrambled eggs mixed all together! You will not be getting take out any longer! 
+        </p>
+        <p>
+            Have fried rice as an entree or a side dish when serving it! If you love fried rice try these variations of fried rice: Bacon Fried Rice, Shrimp Fried Rice, Ham Fried Rice or Chicken Fried Rice.
+        </p>
+    <h1>Ingredients</h1>
+    <ul>
+        <li>White long grain rice- Day old and cold rice help to keep it from being mushy.</li>
+        <li>Small white onion</li>
+        <li>Vegetables- Peas and Carrots.  You can also add in other veggies such as bell pepper, broccoli, cauliflower, asparagus, snow peas and cabbage.</li>
+    </ul>
+
+    <h1>Steps</h1>
+    <ol>
+        <li>Slide the veggies to the side. Pour the beaten eggs onto the other side. Use a spatula to scramble the eggs. Mix them together with the veggies.</li>
+        <li>Add the rice. Combine it with the veggie and egg mixture. Pour the soy sauce on top and stir until it is heated throughout. Garnish with green onions.</li>
+        <li>Cook the veggies and egg in the same pan. </li>
+    </ol>
 </body>
 </html>
