Pictures added for Fried Rice and Fried Noodles

--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Fried Rice!</h1>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Frecipes.timesofindia.com%2Frecipes%2Fchicken-fried-rice%2Frs75581339.cms&psig=AOvVaw338vKGdeiIgosrwybCOqQj&ust=1665606993295000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCOD9zN6D2foCFQAAAAAdAAAAABAD" alt="fried rice">
+    <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/delish-fried-rice-009-1543877224.jpg?crop=1xw:1xh;center,top&resize=768:*" alt="fried rice">
     <h1>Description</h1>
         <p>
             Fried Rice is a combination of long grained rice, mixture of warm peas, carrots and onions with scrambled eggs mixed all together! You will not be getting take out any longer! 
